--- a/ClientApp/public/index.html
+++ b/ClientApp/public/index.html
@@ -10,6 +10,8 @@
     <title>WiseCatalog</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <meta name="google-signin-client_id" content="31241885434-n6lp6oeslfuupm2du46bml9bm98grcjv.apps.googleusercontent.com">
 </head>
   <body>
     <noscript>
